# delective_glui

./: .gitignore  CMakeLists.txt  main.cpp
include/: declarative_ui.hpp
include/declarative/: color.hpp  component.hpp  container.hpp  style.hpp  types.hpp  visitor.hpp
include/declarative/core/: component.hpp  container.hpp  declarative_element.hpp  gui_context.hpp
include/declarative/ui/: component.hpp  container.hpp  declarative_element.hpp
src/: declarative_ui.cpp
src/declarative/: component.cpp  container.cpp  gui_context.cpp  visitor.cpp
test/: CMakeLists.txt  create_test.cpp
